--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,18 @@
 :root {
     /* COLORS */
     /* Primary */
-    
+    --light-cyan: hsl(193, 38%, 86%);
+    --neon-green: hsl(150, 100%, 66%);
     /* Neutral */
-  
+    --grayish-blue: hsl(217, 19%, 38%);
+    --dark-grayish-blue: hsl(217, 19%, 24%);
+    --dark-blue: hsl(218, 23%, 16%);
 
     /*FONTS*/
     --font-primary: 'Manrope', sans-serif;
 
     /* WIDTHS */
-    --width: 40rem;
+    --width: 55rem;
 }
 /* GLOBAL */
 html {
@@ -23,8 +26,9 @@ html {
 
 body {
     font-family: var(--font-primary);
+    background-color: var(--dark-blue);
     font-size: 1.6rem;
-    line-height: 1;
+    line-height: 1.5;
     min-height: 100vh;
     display: grid;
     place-items: center;
@@ -35,7 +39,6 @@ img {
 }
 p {
     margin: 0;
-    line-height: 1.5;
 }
 a {
     text-decoration: none;
@@ -46,6 +49,56 @@ a {
 }
 h1 {
     font-size: 2.8rem;
+}
+
+/* ADVICE */
+.advice {
+    background-color: var(--dark-grayish-blue);
+    text-align: center;
+    padding: 6rem 1.5rem;
+    border-radius: 2rem;
+    position: relative;
+}
+@media (min-width: 768px) {
+    .advice {
+        padding: 6rem 5rem;
+    }
+}
+.advice__id {
+    color: var(--neon-green);
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    letter-spacing: 0.4rem;
+}
+.advice__description {
+    color: var(--light-cyan);
+    padding: 1.5rem 0;
+}
+.advice__image {
+    padding-bottom: 2rem;
+}
+.advice__container-dice {
+    display: inline-block;
+    border: none;
+    padding: 2rem;
+    border-radius: 50%;
+    background-color: var(--neon-green);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    bottom: -8rem;
+}
+@media (hover: hover) {
+    .advice__container-dice {
+        cursor: pointer;
+    }
+    .advice__container-dice:hover {
+        box-shadow: -4px 0px 40px 0px var(--neon-green);
+        -webkit-box-shadow: -4px 0px 40px 0px var(--neon-green);
+        -moz-box-shadow: -4px 0px 40px 0px var(--neon-green);
+    }
+}
+.advice__icon-dice {
+    width: 2.5rem;
 }
 
 /* FOOTER */
@@ -64,6 +117,9 @@ h1 {
         bottom: 0;
     }
 }
+.attribution__text {
+    color: var(--light-cyan);
+}
 .attribution__link {
-    color: var(--bright-blue);
+    color: var(--neon-green);
 }
