--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,16 @@
     /* WIDTHS */
     --width: 55rem;
 }
+
 /* GLOBAL */
 html {
     box-sizing: border-box;
     font-size: 62.5%;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
@@ -33,20 +36,28 @@ body {
     display: grid;
     place-items: center;
 }
+
 img {
     display: block;
     max-width: 100%;
 }
+
 p {
     margin: 0;
 }
+
 a {
     text-decoration: none;
 }
+
 .container {
     width: min(90%, var(--width));
     margin: 0 auto;
 }
+.d-none { 
+    display: none;
+}
+
 h1 {
     font-size: 2.8rem;
 }
@@ -59,24 +70,29 @@ h1 {
     border-radius: 2rem;
     position: relative;
 }
+
 @media (min-width: 768px) {
     .advice {
         padding: 6rem 5rem;
     }
 }
+
 .advice__id {
     color: var(--neon-green);
     font-size: 1.4rem;
     text-transform: uppercase;
     letter-spacing: 0.4rem;
 }
+
 .advice__description {
     color: var(--light-cyan);
     padding: 1.5rem 0;
 }
+
 .advice__image {
     padding-bottom: 2rem;
 }
+
 .advice__container-dice {
     display: inline-block;
     border: none;
@@ -85,18 +101,21 @@ h1 {
     background-color: var(--neon-green);
     position: absolute;
     transform: translate(-50%, -50%);
-    bottom: -8rem;
+    bottom: -6.5rem;
 }
+
 @media (hover: hover) {
     .advice__container-dice {
         cursor: pointer;
     }
+
     .advice__container-dice:hover {
         box-shadow: -4px 0px 40px 0px var(--neon-green);
         -webkit-box-shadow: -4px 0px 40px 0px var(--neon-green);
         -moz-box-shadow: -4px 0px 40px 0px var(--neon-green);
     }
 }
+
 .advice__container-dice:disabled {
     background-color: #E1E1E1;
     box-shadow: none;
@@ -105,6 +124,62 @@ h1 {
 
 .advice__icon-dice {
     width: 2.5rem;
+}
+
+/* SPINNER */
+.spinner {
+    margin: 60px auto 60px;
+    width: 70px;
+    text-align: center;
+}
+
+.spinner>div {
+    width: 18px;
+    height: 18px;
+    background-color: var(--light-cyan);
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0)
+    }
+
+    40% {
+        -webkit-transform: scale(1.0)
+    }
+}
+
+@keyframes sk-bouncedelay {
+
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    }
+
+    40% {
+        -webkit-transform: scale(1.0);
+        transform: scale(1.0);
+    }
 }
 
 /* FOOTER */
@@ -116,6 +191,7 @@ h1 {
     gap: 2rem;
     padding: 1rem;
 }
+
 @media (min-width: 768px) {
     .attribution {
         font-size: 1.2rem;
@@ -123,9 +199,11 @@ h1 {
         bottom: 0;
     }
 }
+
 .attribution__text {
     color: var(--light-cyan);
 }
+
 .attribution__link {
     color: var(--neon-green);
 }
